Sort member list
